crates/yajlir/src/parser/snapshots/yajlir__parser__lexer__tests__lex_case_"`�.snap
---
source: crates/yajlir/src/parser/lexer.rs
expression: "(token, offset, lexer)"
---
(
    Ok(
        Eof,
    ),
    3,
    Lexer {
        allow_comments: false,
        validate_utf8: true,
        error: None,
    },
)
